Fix h horizontal spacing

--- a/css/components/global.less
+++ b/css/components/global.less
@@ -9,7 +9,7 @@
 
 h1, h2, h3, h4, h5, h6 {
   line-height: 1.2;
-  letter-spacing: -10%;
+  letter-spacing: 5%;
 }
 
 p, li, div {
